--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/styled-components": "4.1.8",
     "awesome-typescript-loader": "^5.2.0",
+    "gh-pages": "^2.2.0",
     "html-webpack-plugin": "^3.2.0",
     "source-map-loader": "^0.2.3",
     "typescript": "^3.7.2",
