--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "dependencies": {
+    "lodash": "^4.17.15",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "styled-components": "^4.3.2",
@@ -11,6 +12,7 @@
     "build": "webpack -p"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.149",
     "@types/node": "^10.5.5",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
