--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "dependencies": {
     "lodash": "^4.17.15",
+    "pako": "^1.0.11",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "styled-components": "^4.3.2",
@@ -14,6 +15,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.149",
     "@types/node": "^10.5.5",
+    "@types/pako": "^1.0.1",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/styled-components": "4.1.8",
