--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@types/pako": "^1.0.1",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "@types/styled-components": "4.1.8",
+    "@types/styled-components": "^5.1.2",
     "awesome-typescript-loader": "^5.2.0",
     "html-webpack-plugin": "^3.2.0",
     "source-map-loader": "^0.2.3",
